--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -208,7 +208,7 @@
         \label{tab: capas_IoT}
         \end{table}
 
-    No obstante, según B. Mazon y A. Pan Olivo \cite{internetOfThingsStateOfTheArt}, dentro de las capas más importantes del IoT podemos encontrar:
+    Por otra parte B. Mazon y A. Pan Olivo \cite{internetOfThingsStateOfTheArt} plantean que dentro de las capas más importantes del IoT podemos encontrar:
 
     \begin{itemize}
         \item \textit{La capa de percepción} (Objetos/ Dispositivos/ SensorActuador/ WSN/ Edge Computing/ Sensado), digitaliza y transfiere datos a la capa de red, a través de canales seguros. Se localizan los objetos físicos, dispositivos sensores y actuadores utilizados para recopilar información del contexto. \cite{ref9}.
@@ -475,7 +475,7 @@
     
     En el caso del control de la aparición de los xilófagos, como daño de origen biótico, no se encontró ningún sensor para medir el posible ataque, por lo que para anunciar la presencia de este tipo de anomalía se analizarán los restantes sensores y por correlación de datos será posible tenerlo en cuenta también.
     
-    Por esto se realiza el análisis de las condiciones óptimas para la aparición de los mismos influyendo en la intensidad o severidad del ataque de estos insectos. Entre estos se pueden mencionar temperatura, humedad, entre otros \cite{ripa2004termitas}. 
+    Por esto se realiza el análisis de las condiciones óptimas para la aparición de los mismos influyendo en la intensidad o severidad del ataque de estos insectos. Por mencionar algunos: temperatura, humedad, entre otros \cite{ripa2004termitas}. 
    
     \subsection{Temperatura}\label{subsec:xilofagos_temperatura}
 
