--- a/capitulos/conclusiones.tex
+++ b/capitulos/conclusiones.tex
@@ -2,3 +2,13 @@
     \section*{\LARGE Conclusiones}
     \addcontentsline{toc}{section}{CONCLUSIONES GENERALES}
 \end{center}
+
+Se puede concluir con los siguientes resultados:
+\begin{itemize}
+    \item Análisis y búsqueda de la información para dar cumplimiento a los objetivos planteados.
+    \item Se mostraron los antecedentes históricos, conceptos y las tecnologías actuales de los sistemas de supervisión tanto en otras áreas como en los museos.
+    \item Diseño de la Arquitectura IoT
+    \item Se programaron los dispositivos instalados en el sistema
+    \item Se efectuó el montaje de la tecnología diseñada en la sala de Artes Decorativas como prueba de concepto.
+    \item Mejoras en la implementación de la arquitectura a partir de eventos generados en el trascurso de la investigación.
+\end{itemize}
