--- a/capitulos/listado.tex
+++ b/capitulos/listado.tex
@@ -32,6 +32,8 @@
     \newline
     \textbf{RFID} - Radio Frequency Identification.
     \newline
+    \textbf{RTC} - Reloj de Tiempo Real (Real Time Clock).
+    \newline
     \textbf{SN} - Sensor Network (Rede de Sensores).
     \newline
     \textbf{TVOC} - ...
