--- a/capitulos/recomendaciones.tex
+++ b/capitulos/recomendaciones.tex
@@ -1,4 +1,13 @@
 \begin{center}
     \section*{\LARGE Recomendaciones}    
+    \addcontentsline{toc}{chapter}{Recomendaciones}
 \end{center}
-\addcontentsline{toc}{chapter}{Recomendaciones}
+
+Se recomiendan los siguientes puntos:
+
+\begin{itemize}
+    \item Emplear un mejor hardware, microcontrolador ATMEGA-328P, o alguno otro que posibilite reducir en espacio el esquema de montaje y brindar un mayor número de entradas analógicas sin necesidad de multiplexar.
+    \item Aumentar el número de variables monitoreadas.
+    \item Mejoras en la instrumentación en aras de obtener valores más precisos.
+    \item Optimización general del código, para lograr escalabilidad y robustez.
+\end{itemize}
