--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -22,7 +22,7 @@
         
         En el grupo de las bibliografías consultadas existen diversos ejemplos del empleo del IoT en los museos.
 
-        En el caso del Conjunto Monumental de San Domenico Maggiore, ubicado en Nápoles (Italia), dentro del mismo se han transformado más de 270 esculturas en obras de arte parlantes. Equipado con un tablero de sensores, cada objeto puede proponerse automáticamente a los visitantes, compartiendo su historia en diferentes modalidades e idiomas, lo que permite un proceso de disfrute novedoso durante una experiencia cultural. \cite{monumentoSanDomenico}.
+        En el caso del Conjunto Monumental de San Domenico Maggiore, ubicado en Nápoles (Italia), se han transformado más de 270 esculturas en obras de arte parlantes. Equipado con un tablero de sensores, cada objeto puede proponerse automáticamente a los visitantes, compartiendo su historia en diferentes modalidades e idiomas, lo que permite un proceso de disfrute novedoso durante una experiencia cultural. \cite{monumentoSanDomenico}.
     
         En la Universidad de El Cairo, Egipto, desarrollaron un sistema para la conservación de las piezas en los museos, un sistema que no solo mide los atributos del entorno, sino que también mantiene la seguridad de los artefactos al detectar cualquier prueba de contacto o movimiento. También controla la intensidad de la luz en función de la ocupación de la sección del museo. Una característica diferenciadora del sistema es el diseño de energía ultrabaja de su nodo sensor que conduce a una larga vida útil de hasta 50 días. \cite{ultraLowPowerConservacion}.
     
@@ -84,16 +84,16 @@
 
     \section{Colección de Arte y Arqueología Francisco Prat Puig}\label{sec:coleccion_prat}
 
-    Como parte de las entrevistas con los especialistas y los recoridos en la colección se identificaron aspectos a destacar tales como:
+    Como parte de las entrevistas con los especialistas y los recorridos en la colección se identificaron aspectos a destacar tales como:
 
     \begin{itemize}
-        \item Presenta daños causados por la incidencia de las variables ambientales o ataques biológicos de xilófagos en los bienes patrimoniales que se encuentran en exposicion o en el almacen. Principalmente para aquellos confeccionados con materiales como son: el papel, cuero, tela y madera.
+        \item Presenta daños causados por la incidencia de las variables ambientales o ataques biológicos de xilófagos en los bienes patrimoniales que se encuentran en exposición o en el almacén. Principalmente para aquellos confeccionados con materiales como son: el papel, cuero, tela y madera.
         \item Imposibilidad de conocer o controlar el estado de conservación de los elementos patrimoniales en tiempo real.
         \item No existe ningún tipo de tecnología implementada en la colección para los especialistas ni hacia el público visitante.
         \item Insuficiente control ambiental, seguridad y prevención de posibles daños en el futuro de la colección.
     \end{itemize}
 
-    En síntesis, se puede afimar que la gestión de la colección de Artes y Arqueología Francisco Prat Puig carece de una intervención tecnológica que favorezca la calidad en la toma de decisiones para su conversacion preventiva.\\
+    En síntesis, se puede afimar que la gestión de la colección de Artes y Arqueología Francisco Prat Puig carece de una intervención tecnológica que favorezca la calidad en la toma de decisiones para su conversación preventiva.\\
 
     La colección Francisco Prat Puig está distribuida de tal modo que las piezas están ubicadas en tres salas. Enumerándolas: sala 1, sala 2 y sala 3.\\
     La sala 1 (figura \ref{imag:sala_1}) está caracterizada por la presencia de varios objetos distribuidos en vitrinas, sobre mesas, colgados, en estantes empotrados en la pared, o en pedestales. Se observan piezas de cerámica, marfil, metal, piedra, madera, entre otros materiales, así como colecciones de numismática.\newline
@@ -110,7 +110,7 @@
     En la sala 2 solamente se encuentran pinturas pertenecientes a la colección, estas poseen también condiciones de deterioro notables por el efecto de la humedad y del nivel de luz dentro del local.
 
     % [Imagen de la sala 2]\newline
-    Dentro de la sala 3 (figura \ref{imag:sala_3}) se localizan también varios objetos ubicados en pedestales mostrando colecciones de medallas y objetos personales del mismo Prat Puig y, además, vitrinas donde se hallan, principalmente, objetos de cerámica como platos, jarrones y cántaros.\newline
+    Dentro de la sala 3 (figura \ref{imag:sala_3}) se localizan también varios objetos ubicados en pedestales mostrando colecciones de medallas y objetos personales de Prat Puig y, además, vitrinas donde se hallan, principalmente, objetos de cerámica como platos, jarrones y cántaros.\newline
     
     \begin{figure}[H]
         \centering
@@ -203,7 +203,7 @@
         Capa de aplicación                                                         & \begin{tabular}[c]{@{}l@{}}Ayuda en los procedimientos de análisis, control de\\ dispositivos e informes a los usuarios finales.\end{tabular}                                \\ \hline
         Capa empresarial                                                           & \begin{tabular}[c]{@{}l@{}}Deriva información y análisis de toma de decisiones\\ a partir de datos.\end{tabular}                                                             \\ \hline
         Capa de seguridad                                                          & \begin{tabular}[c]{@{}l@{}}Cubre todos los aspectos de protección de toda la\\ arquitectura de IoT.\end{tabular}                                                             \\ \hline
-        Capa de borde                                                              & \begin{tabular}[c]{@{}l@{}}Funciona en un bode o cerca de la recopilación\\ de información del dispositivo.\end{tabular}                                                     \\ \hline
+        Capa de borde                                                              & \begin{tabular}[c]{@{}l@{}}Funciona en un borde o cerca de la recopilación\\ de información del dispositivo.\end{tabular}                                                     \\ \hline
         \end{tabular}
         \label{tab: capas_IoT}
         \end{table}
@@ -224,7 +224,7 @@
 
     \subsection{Propuesta de la Arquitectura IoT del Sistema}\label{subsec:propuesta_arq}
 
-    En base de los esquemas de arquitecturas propuestas, definimos el uso de la arquitectura del proyecto la cual se cimienta en la estructura de cuatro capas, considerando las diferentes capas que la componen:
+    En base de los esquemas de arquitecturas propuestas, definimos el uso de la arquitectura del proyecto la cual se cimenta en la estructura de cuatro capas, considerando las diferentes capas que la componen:
     
     \begin{itemize}
         \item \textbf{Capa de Percepción: }Contiene todos los Nodos que se ubicarán en cada vitrina de la colección con sus sensores interconectados según sea la necesidad de cada vitrina y permitirán obtener los valores de las variables ambientales.
@@ -254,7 +254,7 @@
     \textbf{1.3.2.1\hspace{5mm}Sensores}
     
     Los sensores convierten estímulos físicos en señales eléctricas analógicas o digitales y según la señal se clasifican en acústicos, eléctricos, magnéticos, ópticos, térmicos y mecánicos \cite{hernandez}.
-    También, se encargan de monitorear las características físicas, químicas o ambientales como: temperatura, humedad, movimiento, velocidad del viento, dirección del viento, nivel de Ph, electro conductividad, nivel de luz, entre otras \cite{lee}.
+    También, se encargan de monitorear las características físicas, químicas o ambientales como: temperatura, humedad, movimiento, velocidad del viento, dirección del viento, nivel de pH, electro conductividad, nivel de luz, entre otras \cite{lee}.
 
     Las señales eléctricas producidas por los sensores son proporcionales a los parámetros físicos que se monitorean y sus señales eléctricas deben ser optimizadas para el rango de entrada de los sistemas de adquisición \cite{nationalInstrument}.\\
 
@@ -412,7 +412,7 @@
     \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.3.2\hspace{5mm}Protocolo HTTP}
         \textbf{1.3.3.2\hspace{5mm}Protocolo HTTP}
 
-    HTTP de sus siglas en inglés: “Hypertext Transfer Protocol”, es el nombre de un protocolo el cual nos permite realizar una petición de datos y recursos, como pueden ser documentos HTML. Es la base de cualquier intercambio de datos en la Web, y un protocolo de estructura cliente-servidor, esto quiere decir que una petición de datos es iniciada por el elemento que recibirá los datos (el cliente), normalmente un navegador Web. Así, una página Web completa resulta de la unión de distintos sub-documentos recibidos, por ejemplo: un documento que especifique el estilo de maquetación de la página Web (CSS), el texto, las imágenes, videos, scrips, etcétera.\\
+    HTTP de sus siglas en inglés: “Hypertext Transfer Protocol”, es el nombre de un protocolo el que nos permite realizar una petición de datos y recursos, como pueden ser documentos HTML. Es la base de cualquier intercambio de datos en la Web, y un protocolo de estructura cliente-servidor, esto quiere decir que una petición de datos es iniciada por el elemento que recibirá los datos (el cliente), normalmente un navegador Web. Así, una página Web completa resulta de la unión de distintos sub-documentos recibidos, por ejemplo: un documento que especifique el estilo de maquetación de la página Web (CSS), el texto, las imágenes, videos, scrips, etcétera.\\
 
 
     \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.3.3\hspace{5mm}Protocolo TCP/IP}
@@ -432,17 +432,17 @@
     %\section{Sistema de comunicación}\label{sec: sistemaComunicación}
     \section{Variables microclimáticas recomendadas}\label{sec:variables_microclimaticas}
 
-    En los museos tanto universitarios como los que no poseen este tipo de característica, se requiere de un control ambiental del mismo que permita mantener el estado de conservación de los bienes patrimoniales que allí se exponen.
+    En los museos tanto universitarios como los que no poseen este tipo de característica, se requiere de un control ambiental de los mismo que permita mantener el estado de conservación de los bienes patrimoniales que allí se exponen.
 
     En la bibliografía consultada se utiliza el concepto de conservación preventiva, la cual la define Bachman \cite{bachmann1992conservation} como un pilar básico de la gestión museológica y de la cual de ella depende el mantenimiento de las colecciones de forma adecuada, viable y sostenible en el tiempo, además de que permite la durabilidad de los elementos patrimoniales y reduce las intervenciones de los especialistas tal como lo comenta Merrit y cols. \cite{merrittPreventiveConservationHistoric2010}. Las condiciones microclimáticas más importantes a tener en cuanta según Thomson \cite{thomsonMuseumEnvironment2018} y Márquez \cite{marquezAgentesDeterioroMedioambientales2016} son la temperatura, la humedad relativa, la iluminación, las vibraciones, el CO2, la polución y el biodeterioro.
 
-    La temperatura será tomada en grados Celcios (°C), la humedad en \%HR, el CO2 será analisado en ppm (partículas por millón), la iluminación en Luxers (Lx), la polución en micro-gramos por metros cúbicos (ug/m3) y las vibraciones en dB.
+    La temperatura será tomada en grados Celcius (°C), la humedad en \%HR, el CO2 será analizado en ppm (partículas por millón), la iluminación en Luxers (Lx), la polución en micro-gramos por metros cúbicos (ug/m3) y las vibraciones en dB.
 
     Estos valores deben encontrarse en rangos determinados como se muestra en la siguiente tabla \ref{tab:variables_microclimaticas} según los autores Buys \& cols., Heras \& cols., Koob \& cols., Álvaro y Márquez.
 
     Estos valores son definidos específicamente por el tipo de clima del país, y Cuba por ser un país cálido y húmedo en algunas regiones como es la ciudad de Santiago de Cuba donde se encuentra la colección objeto de estudio de este trabajo,
     es importante realizar una valoración de los valores adecuados de estas variables ambientales por parte de los especialistas que puedan ser definidos en la propuesta y permitan mantener la colección en buen estado de conservación.
-    Vale destacar que los especialistas del Centro Prat Puig han manifestado que no tienen referencia que ninguna métrica o metodología por la cual se rigan para la toma de decisiones con respecto a las variables ambientales recomendadas para la conservación de los bienes culturales de la colección.
+    Vale destacar que los especialistas del Centro Prat Puig han manifestado que no tienen referencia que ninguna métrica o metodología por la cual se rijan para la toma de decisiones con respecto a las variables ambientales recomendadas para la conservación de los bienes culturales de la colección.
     
     \begin{table}[H]
         \centering
@@ -502,7 +502,7 @@
 
     Mientras que Álvaro \cite{recioalvaroConservacionPreventivaExposiciones2020} plantea que una temperatura contraindicada (demasiado alta, demasiado baja o fluctuaciones) provoca alteraciones de los colores y desintegración progresiva de los materiales orgánicos, especialmente si son químicamente inestables como el papel ácido, fotografías en colores, entre otros, así como el agrietamiento de pinturas y otros polímeros a causa de la frialdad.
 
-    En el caso de Gómez \cite{gomezcarreteroEfectosAcidoNitrico2015a} plantea que la temperatura es un factor de envejecimiento del óleo. Actúa de modo semejante y en combinación con la luz, y produce cambios de humedad relativa al aumentar o disminuir la temperatura ambiental.
+    Gómez \cite{gomezcarreteroEfectosAcidoNitrico2015a} plantea que la temperatura es un factor de envejecimiento del óleo. Actúa de modo semejante y en combinación con la luz, y produce cambios de humedad relativa al aumentar o disminuir la temperatura ambiental.
 
     \textbf{Humedad}
 
