--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -16,14 +16,14 @@
 
     La Universidad de Oriente cuenta con tres colecciones como parte de su patrimonio cultural. Dos de ellas se encuentran en la sede Antonio Maceo; la primera, con carácter arqueológico, situada en la planta baja de la Facultad de Ciencias Sociales. Mientras que la segunda, el museo de Historia Natural Dr. Theodoro Ramsden de la Torre, se localiza en la tercera planta de la Facultad de Derecho. Estas no están abiertas directamente al público debido a su ubicación en aulas, siendo así empleados como medios de enseñanza.
 
-    La tercera de estas colecciones, la Francisco Prat Puig, ubicada en la Oficina del Historiador de la Ciudad de Santiago de Cuba, contiene piezas de interés histórico y cultural. A diferencia de las muestras anteriores ésta posee características de museo y se encuentra emplazada en un lugar con acceso al público. Allí se destacan colecciones de numismática, artes plásticas, cerámica, condecoraciones del propio Prat que le fueron otorgadas por su aplia trayectoria docente, y objetos personales entre otras; estas fueron donadas por Prat a la Casa de Altos Estudios oriental.
+    La tercera de estas colecciones, la Francisco Prat Puig, ubicada en la Oficina del Historiador de la Ciudad de Santiago de Cuba, contiene piezas de interés histórico y cultural. A diferencia de las muestras anteriores esta posee características de museo y se encuentra emplazada en un lugar con acceso al público. Allí se destacan colecciones de numismática, artes plásticas, cerámica, condecoraciones del propio Prat que le fueron otorgadas por su amplia trayectoria docente, objetos personales, entre otras; estas fueron donadas por Prat a la Casa de Altos Estudios oriental.
 
     Las entrevistas con los especialistas y los recorridos que se hicieron por el museo suministraron datos de importancia dando a conocer que el estado de conservación de las piezas se encuentra en un grado de deterioro notable a causa de la influencia de la temperatura, la humedad, el CO2, las vibraciones, el salitre, la iluminación, el polvo, entre otros; estos inciden directamente en el deterioro gradual de las obras.
     
     Con la aplicación del Internet de las Cosas en estas salas expositivas es posible reducir la incidencia de estos factores. La tecnología permitirá a los responsables del museo tener una visión más precisa y completa de lo que ocurre, brindando la posibilidad de evaluar en tiempo real el estado de cada área para la toma de decisiones ante alertas por eventos de deterioro.
     
-    El análisis de la situación descrita permite identificar como \textbf{problema de investigación} la necesidad de un sistema de supervisión para conocer en tiempo real el estado de los parámetros ambientales presentes en la Colección de Arte y Arqueología “Francisco Prat Puig” ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba, imposibilitando la labor de conservación de los especialistas del centro y como
-    \textbf{objeto de la investigación:} sistema basado en IoT para la supervisión de los parámetros ambientales presentes en la Colección de Arte y Arqueología “Francisco Prat Puig” teniendo en cuenta como \textbf{objetivo} diseñar e implementar un sistema de IoT que permita la supervisión en tiempo real de las variables medioambientales existentes en la Colección Prat. Como \textbf{campo de acción} los sistemas de supervisión basados en IoT para la conservación de las piezas en los museos.
+    El análisis de la situación descrita permite identificar como \textbf{problema de investigación} la necesidad de un sistema de supervisión para conocer en tiempo real el estado de los parámetros ambientales presentes en la Colección de Arte y Arqueología “Francisco Prat Puig” ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba, imposibilitando la labor de conservación de los especialistas del centro, y como
+    \textbf{objeto de investigación:} sistema basado en IoT para la supervisión de los parámetros ambientales presentes en la Colección de Arte y Arqueología “Francisco Prat Puig” teniendo en cuenta como \textbf{objetivo} diseñar e implementar un sistema de IoT que permita la supervisión en tiempo real de las variables medioambientales existentes en la Colección Prat. Como \textbf{campo de acción} los sistemas de supervisión basados en IoT para la conservación de las piezas en los museos.
 
     Se plantea como \textbf{hipótesis}, que si logramos diseñar e implementar un sistema de supervisión de las piezas de arte en la Colección Prat, de tal manera que se muestren en tiempo real, el estado de conservación de los objetos, posibles afectaciones y los momentos más adecuados para efectuar una restauración, estaríamos extendiendo la vigencia de las piezas  y mejorando las condiciones de trabajo de los especialistas que allí laboran.\\
     
@@ -64,7 +64,7 @@
 
     El presente trabajo investigativo está compuesto por una introducción general, dos capítulos con sus introducciones y conclusiones parciales, conclusiones generales, recomendaciones, apéndices y bibliografías.
 
-    En el capítulo 1 se abordan los antecedentes de la aplicación del Internet de las Cosas en los museos a nivel internacional así como la situación del IoT en los museos de nuestro País, analisis de las arquitecturas de IoT y sus principales capas, la proposición de una para el proyecto y la caracterización de sus capas, así como el análisis de las variables microclimáticas recomendadas por los autores y las principales afectaciones, además del estudios de las condiciones medioambientales factibles para la aparición de insectos y su prevención.
+    En el capítulo 1 se abordan los antecedentes de la aplicación del Internet de las Cosas en los museos a nivel internacional así como la situación del IoT en los museos de nuestro País, análisis de las arquitecturas de IoT y sus principales capas, la proposición de una para el proyecto y la caracterización de sus capas, así como el análisis de las variables microclimáticas recomendadas por los autores y las principales afectaciones, además del estudio de las condiciones medioambientales factibles para la aparición de insectos y su prevención.
 
-    En el capítulo 2 se trata lo relacionado al diseño y la implementación del Sistema de Supervisión y Monitoreo de las piezas de arte en el museo de la muestra pertenecientes a la Colección de Arte y Arqueología Francisco Prat Puig, se analiza la selección de la instrumentación en base al ahorro de energía y de recursos, creando las condiciones mínimas indispensables para el montaje del proyecto de automatización ajustado a las características de instalación seleccionadas.
+    En el capítulo 2 se trata lo relacionado al diseño y la implementación del Sistema de Supervisión de las piezas de arte en el museo de la muestra pertenecientes a la Colección de Arte y Arqueología Francisco Prat Puig, se analiza la selección de la instrumentación en base al ahorro de energía y de recursos, creando las condiciones mínimas indispensables para el montaje del proyecto de automatización ajustado a las características de instalación seleccionadas.
     
