--- a/caratula.tex
+++ b/caratula.tex
@@ -1,13 +1,42 @@
 \pagestyle{empty}
 
-% \marginsize{0.1mm}{0.1mm}{0.1mm}{0.1mm}
+\begin{titlepage}
+    \begin{center}
+        \includegraphics[width = 4.5cm, height = 4.5cm]{imagenes/uo.jpg}
+    \end{center}
+    \begin{center}
+        \textbf{\Large Universidad de Oriente\\
+        Facultad de Ingeniería Eléctrica}\\
+        \textbf{Departamento de Automática}
+    \end{center}
 
-% \begin{figure}[ht!]
-%     \begin{flushleft}
-%         \includegraphics[width=9cm, height=29.6cm]{imagenes/a1.jpg}
-%     \end{flushleft}
-% \end{figure}
+    \vspace{1cm}
+   
+    \begin{center}
+        \begin{figure}[h]
+            \centering
+            \includegraphics[width=14cm, height=1.4cm]{imagenes/trabajo de diploma.jpg}
+        \end{figure}
+        % \textbf{\LARGE TRABAJO DE DIPLOMA}\\
+        \textbf{\large En opción al título de Ingeniero en Automática}
+    \end{center}
 
-\begin{center}
-    \textbf{Miguel Ángel Zayas Barbán [Aut: 4to]}
-\end{center}
+    \vspace{1cm}
+    \begin{center}
+        \textbf{\LARGE Autor}\\
+        \textbf{\Large Miguel Ángel Zayas Barbán}
+    \end{center}
+    \vspace{1cm}
+    \begin{center}
+        \textbf{\LARGE Tutor}\\
+        \textbf{\Large M.Sc. Angel Antonio Ravelo Batista}
+    \end{center}
+
+    \begin{center}
+        \vfill
+        \textbf{\large Noviembre, 2022}
+    \end{center}
+
+
+\end{titlepage}
+
