--- a/capitulos/abstract.tex
+++ b/capitulos/abstract.tex
@@ -5,8 +5,8 @@
 \addcontentsline{toc}{section}{Abstract}
     \textbf{\textit{\LARGE Abstract}}
     \newline
+    
+    \textit{This Diploma Work deals with the design and installation process of a monitoring and visualization system of the variables to control the state of conservation of the pieces belonging to the Francisco Prat Puig Collection of Art and Archeology located in the Historian's Office of the province of Santiago de Cuba. Generalities about the application of the Iot in museums internationally and in Cuba are discussed. A characterization of the sensors to be used for supervision is carried out, as well as the assembly of a proof of concept. In accordance with the characteristics of the place, the assembly of said system is carried out, facilitating the supervision of the state of the pieces and providing the specialists of the center with the necessary data for decision-making in the event of future deterioration events. This system can be used in subsequent projects related to the monitoring of environmental variables, facilitating the visualization of their status and early warning in case of possible affectations.}\\
 
-    \textit{...}
 
-
-    \textbf{\textit{Key-Words: }} 
+    \textbf{\textit{Key-Words: IoT, Sensors, Cultural Heritage, Supervision System.}} 
