--- a/capitulos/capitulo2.tex
+++ b/capitulos/capitulo2.tex
@@ -602,8 +602,8 @@ En la siguiente tabla se relaciona lo que se considera como presupuesto mínimo 
     Sensor ZP07-MP503                   & \$2.22                                   \\ \hline
     Sensor BH1750                       & \$1.00                                   \\ \hline
     Lector tarjeta SD                   & \$0.66                                   \\ \hline
-    RTC DS3231                          & \$                                       \\ \hline
-                                        & Total: \$17.40                           \\ \hline
+    RTC DS3231                          & \$1.91                                   \\ \hline
+                                        & Total: \$19.31                           \\ \hline
     \end{tabular}
 \end{table}
 
