--- a/capitulos/agradecimientos.tex
+++ b/capitulos/agradecimientos.tex
@@ -2,9 +2,9 @@
 
 A Dios, por ser mi pronto auxilio en las tribulaciones.\\
 A mi tutor Angel Ravelo por soportar la carga y la responsabilidad de guiarme en la realización de este trabajo, por las correcciones y por el apoyo como amigo.\\
-A mi novia Lianis por haber estado a mi lado apoyándome, siendo mi mano derecha.\\
+A mi esposa Lianis, por haber estado a mi lado apoyándome, siendo mi mano derecha.\\
 A mi familia, en especial a mis padres, Rubiel y Dámaris y a mi hermanita Susana por el apoyo en sus oraciones.\\
 A mis amigos, Sergio, Ana, que me apoyaron incondicionalmente durante todo el proceso.\\
 A mis compañeros de cuarto, Jandro, Enmanuel, José(Calvo), Jesú por los aportes al avance.\\
-A mis profesores en general por el conocimiento que me fueron impartiendo desde primer año en la universidad.\\
+A mis profesores en general, por el conocimiento que me fueron impartiendo desde primer año en la universidad.\\
 A todas las personas que de una manera u otra aportaron su granito de arena.\\
